# poker-game

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  init.sql  main.py  pyproject.toml
backend/src/api/: hands.py  poker_calculator.py
backend/src/database/: connection.py
backend/src/domain/: hand.py
backend/src/repository/: hand_repository.py
backend/tests/: test_api.py
frontend/: .dockerignore  Dockerfile  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/poker/: ActionPanel.tsx  GameSetup.tsx  GameTable.tsx  HandHistory.tsx  PlayerCard.tsx  PlayingCard.tsx  WinnerCelebration.tsx
frontend/components/ui/: custom-toast.tsx
frontend/lib/: api.ts  confetti.ts  hand-evaluator.ts  poker-engine.ts  toast.ts
frontend/lib/poker/: player-names.ts
frontend/tests/__tests__/: poker-engine.test.ts
